fix: displaying of statistics block on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -490,7 +490,6 @@ h6 {
   -webkit-transition: all 1s ease-in-out;
   -o-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
-  padding-top: 3vh;
   max-height: 100%;
   overflow-y: auto;
   position: absolute;
@@ -503,6 +502,7 @@ h6 {
 }
 
 .news__body {
+  padding: 7vh 0;
   display: grid;
   grid-template: repeat(2, 1fr)/repeat(3, 1fr);
   justify-items: center;
@@ -629,7 +629,8 @@ body {
 }
 
 .header__body {
-  min-height: 13vh;
+  min-height: 10vh;
+  padding-top: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -786,7 +787,7 @@ body {
 }
 
 .footer__body {
-  min-height: 10vh;
+  min-height: 7vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -847,7 +848,7 @@ body {
   min-height: 85vh;
   display: grid;
   grid-template-rows: repeat(2, auto);
-  row-gap: 34px;
+  padding-bottom: 20px;
 }
 
 .author__buttons {
@@ -1086,6 +1087,9 @@ body {
   visibility: hidden;
   position: absolute;
   left: 100%;
+  -webkit-transform: scaleX(0);
+  -ms-transform: scaleX(0);
+  transform: scaleX(0);
   display: grid;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
@@ -1100,9 +1104,15 @@ body {
 }
 
 .statistics.active {
+  -webkit-transition: all 0.5s ease-in-out 0.2s;
+  -o-transition: all 0.5s ease-in-out 0.2s;
+  transition: all 0.5s ease-in-out 0.2s;
   position: relative;
   left: 0;
   visibility: visible;
+  -webkit-transform: scaleX(1);
+  -ms-transform: scaleX(1);
+  transform: scaleX(1);
 }
 
 .statistics__main {
@@ -1338,6 +1348,9 @@ body {
 }
 
 .licenses.active {
+  -webkit-transition: all 0.5s ease-in-out 0.2s;
+  -o-transition: all 0.5s ease-in-out 0.2s;
+  transition: all 0.5s ease-in-out 0.2s;
   position: relative;
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
@@ -1497,6 +1510,7 @@ body {
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    margin-bottom: 25px;
   }
 
   .profile {
